--- a/style.css
+++ b/style.css
@@ -6,48 +6,74 @@
 }
 
 /* navbar */
-.navbar {
-    background-color: #007bff;
-    padding: 15px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
 .navbar .logo {
     color: white;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     text-decoration: none;
+    padding-left: 69%;
 }
 
-.navbar #nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.navbar ul li {
-    margin: 0 15px;
-}
-
-.navbar ul li a {
+.navbar {
+    overflow: hidden;
+    background-color: #007bff;
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
     color: white;
-    font-size: 18px;
-    transition: 0.3s;
-}
-
-.navbar ul li a:hover {
-    color: #dfe6e9;
-}
-
-.menu-toggle {
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: grey;
+  }
+  
+  .dropdown-content {
     display: none;
-    font-size: 28px;
-    color: white;
-    cursor: pointer;
-}
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  /*  */
 
 /* card */
 .card-container {
@@ -101,6 +127,7 @@ footer {
     background-color: #007bff;
     color: white;
     text-align: center;
+    position: fixed;
     padding: 20px;
     bottom: 0;
     width: 100%;
@@ -128,4 +155,8 @@ footer a:hover {
 
 h1 {
     padding-left: 20px;
+}
+
+p {
+    color: black;
 }
